# CABW

./: .coverage  .env.example  .gitignore  ARCHITECTURAL_FIXES.md  ARCHITECTURE_COMPLETE.md  ENHANCEMENTS_COMPLETE.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_SUMMARY.md  README.md  README_FIXES_SUMMARY.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  main.yml
cabw_enterprise/: CLAUDE.md  README.md  demo.py  g.md  pyproject.toml
cabw_enterprise/.github/workflows/: ci.yml
cabw_enterprise/docker/: Dockerfile  docker-compose.yml
cabw_enterprise/src/cabw/: __init__.py  config.py
cabw_enterprise/src/cabw/api/: __init__.py  auth.py  main.py  schemas.py
cabw_enterprise/src/cabw/api/routers/: __init__.py  auth.py  simulation.py  simulation_secure.py  simulations.py  ws.py
cabw_enterprise/src/cabw/core/: __init__.py  actions.py  behavior_tree.py  deliberation.py  emotions.py  integrated_agent.py  teamwork.py  world_features.py
cabw_enterprise/src/cabw/db/: __init__.py  base.py  models.py
cabw_enterprise/src/cabw/distributed/: __init__.py  messenger.py
cabw_enterprise/src/cabw/economy/: __init__.py
cabw_enterprise/src/cabw/governance/: __init__.py  enforcement.py  security.py
cabw_enterprise/src/cabw/ml/: nlp_interface.py  rl_agents.py
cabw_enterprise/src/cabw/simulation/: __init__.py  engine.py
cabw_enterprise/src/cabw/utils/: logging.py
cabw_enterprise/src/cabw/viz/: __init__.py  dashboard.py
cabw_enterprise/src/cabw/worldgen/: __init__.py  terrain.py
cabw_enterprise/tests/: test_api.py  test_core.py  test_deterministic.py  test_economy.py  test_governance.py  test_simulation.py  test_worldgen.py
docker/: Dockerfile
src/CABW/: __init__.py
src/CABW/api/: __init__.py  main.py
src/cabw/: __init__.py  config.py
src/cabw/api/: __init__.py  auth.py  main.py  schemas.py
src/cabw/api/routers/: __init__.py  auth.py  simulation.py  simulation_secure.py  simulations.py  ws.py
src/cabw/core/: __init__.py  actions.py  behavior_tree.py  deliberation.py  emotions.py  integrated_agent.py  teamwork.py  world_features.py
src/cabw/db/: __init__.py  base.py  models.py
src/cabw/distributed/: __init__.py  messenger.py
src/cabw/economy/: __init__.py  resources.py
src/cabw/governance/: __init__.py  enforcement.py  security.py
src/cabw/ml/: __init__.py  behavior_optimization.py  nlp_interface.py  rl_agents.py
src/cabw/simulation/: __init__.py  deterministic.py  engine.py
src/cabw/utils/: logging.py
src/cabw/viz/: __init__.py  dashboard.py  renderer.py
src/cabw/worldgen/: __init__.py  terrain.py
tests/integration/: test_placeholder.py
tests/unit/: test_core.py
web/: package.json
